--- a/Services.GageRR.Tests/Services.GageRR.Tests.csproj
+++ b/Services.GageRR.Tests/Services.GageRR.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
@@ -24,7 +24,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Services.GageRR.Core\Services.GageRR.Core.csproj" />
-    <ProjectReference Include="..\Services.GageRR\Services.GageRR.Core.csproj" />
   </ItemGroup>
 
 </Project>
