Feat Gage엑셀폼 다운로드 적용

--- a/Services.GageRR.WebApp/tsconfig.json
+++ b/Services.GageRR.WebApp/tsconfig.json
@@ -6,7 +6,10 @@
         "removeComments": false,
         "sourceMap": true,
         "target": "es5",
-        "outDir": "wwwroot/app"
+        "outDir": "wwwroot/app",
+        "typeRoots": [
+            "./node_modules/@types"
+        ]
     },
     "include": [
         "Pages/**/*"
